# eshopbox-sdk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LiveBuildAndUpload.sh  MANIFEST.in  README.md  TestBuildAndUpload.sh  buildAndUpload.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: inventory.rst  order_status_update.rst  orders.rst  payments.rst  products.rst  rate_calculator.rst  serviceability.rst  settings.rst  shipments.rst  webhook.rst  wrapper.rst
docs/examples/: advanced_usage.rst  basic_usage.rst
eshopbox/: __init__.py  __version__.py  auth.py  cache_token.py  client.py  exceptions.py
eshopbox/api/: base.py  consignments.py  inventory.py  order_status_update.py  orders.py  payments.py  products.py  rate_calculator.py  returns.py  serviceability.py  settings.py  shipments.py  webhooks.py  wrapper.py
eshopbox/models/: __init__.py  address.py  order.py  product.py  shipment.py
examples/: create_order.py  inventory_setup.py  manage_inventory.py  order_setup.py  order_status_update_setup.py  payments_setup.py  products_setup.py  rate_calculator_setup.py  serviceability_setup.py  settings_setup.py  shipment_setup.py  track_shipment.py  webhook_setup.py  wrapper_setup.py
tests/: conftest.py  test_auth.py  test_orders.py  test_products.py  test_shipments.py
tests/integration/: test_workflow.py
