[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eshopbox-sdk"
version = "1.1.10"
description = "Python SDK for EShopBox Shipping APIs"
readme = "README.md"
authors = [
    {name = "Sakib Malik", email = "sakibwis.wis@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["eshopbox", "shipping", "logistics", "api", "sdk"]
dependencies = [
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "redis>=4.0.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "pre-commit>=2.20",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/sakib-wis/eshopbox-sdk"
Documentation = "https://eshopbox-sdk.readthedocs.io"
Repository = "https://github.com/sakib-wis/eshopbox-sdk"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=eshopbox --cov-report=html --cov-report=term"
