[metadata]
name = eshopbox-sdk
version = 0.1.0
author = Your Name
description = Python SDK for Eshopbox API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourrepo/eshopbox-sdk
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    requests
    pydantic

[options.packages.find]
exclude =
    tests

# -----------------------------
# PYTEST CONFIGURATION
# -----------------------------
[tool:pytest]
testpaths = tests
addopts = 
    -ra 
    --strict-markers
    --disable-warnings
    --maxfail=1

# pytest will auto-detect test files like:
#   test_*.py
#   *_test.py
#   inside tests/**

# -----------------------------
# COVERAGE CONFIG
# -----------------------------
[coverage:run]
branch = True
source =
    eshopbox
omit =
    tests/*
    */__init__.py

[coverage:report]
show_missing = True
skip_covered = True

# -----------------------------
# FLAKE8 CONFIG
# -----------------------------
[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv
ignore =
    E203
    W503

# -----------------------------
# MYPY CONFIG
# -----------------------------
[mypy]
python_version = 3.8
ignore_missing_imports = True
strict_optional = True

# -----------------------------
# ISORT CONFIG
# -----------------------------
[isort]
profile = black
line_length = 120
